testing/macro-tests/tests/ui/generated_requires_optional_ulid.stderr
error: generated(insert = ...) currently supports only single-value fields
  --> tests/ui/generated_requires_optional_ulid.rs:23:21
   |
23 |             ident = "token",
   |                     ^^^^^^^
